2004-11-15  David Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-object.c: 

	Removed unnecessary debug string from translations

	* Makefile.am, cong-fake-plugin-hooks.c, cong-fake-plugin-hooks.h,
	plugin-table.c: 

	Added new plugin, to deal with DocBook tables (eventually).
	Currently displays the various elements as paragraphs.

	* cong-editor-node-comment.c, cong-editor-node-document.c,
	cong-editor-node-dtd.c, cong-editor-node-element-structural.c,
	cong-editor-node-element-unknown.c,
	cong-editor-node-entity-decl.c, cong-editor-node-entity-ref.c,
	cong-editor-node-text.c, cong-editor-node-unimplemented.c,
	cong-editor-node.h, cong-object.h,
	plugin-admonition-node-element.c,
	plugin-lists-node-element-listitem.c:

	Fixed the GObject boilerplate macros to allow more than one
	CongEditorNode subclass to be declared/defined within a single
	source file.

2004-11-05 Nickolay V. Shmyrev <nshmyrev@yandex.ru>
 
	* cong-editor-line-manager-simple.c: Quick-fix to
 	make simple documents editable.
 
2004-11-04  Alan Horkan <horkana@maths.tcd.ie>

	* cong-menus.c: added some stock menu icons, 
	tweaked some mnemonics, added F12 for Revert.  

2004-11-05 Michèle Garoche  <michele.garoche@easyconnect.fr>

	* tree.c: 

	Corrected description for doc in two places 
	(element_desc vs ds_element)

2004-10-28 Nickolay V. Shmyrev <nshmyrev@yandex.ru>

	* lots of files: Merged WidgetPlayground branch.

2004-10-26  David Malcolm  <david@davemalcolm.demon.co.uk>

	* popup.c: 

	Disabled debug code that was spewing out the XML representation of
	the GUI

	* cong-menus.c: 

	Moved the Homepage action from the context menu (where it had been
	for testing purposes) back to the Help menu

2004-10-26  David Malcolm  <dmalcolm@redhat.com>

	* cong-language.h, cong-language.c, cong-dispspec.c: 

	Fixed name/description handling within the dispspec->XML code 

	* cong-node.c, cong-node.h: 

	Added some news ways to create nodes

	* cong-language.c: 
